# parallel_101_hw_4

./: CMakeLists.txt  README.md  README.zh.md  main.cpp  origin.h  sse_intrin.h  sse_intrin_rcp_rsqrt.h  sse_omp.h  utils.h
